Fix typo "ReftPtr"

third_party/WebKit/Source/platform/wtf/PassRefPtr.h has a typo on line
47:
https://cs.chromium.org/chromium/src/third_party/WebKit/Source/platform/wtf/PassRefPtr.h?dr=CSs&l=47

"ReftPtr"

R=esprehn@chromium.org
BUG=706566

Review-Url: https://codereview.chromium.org/2780903005
Cr-Commit-Position: refs/heads/master@{#460595}

Former-commit-id: 7bc6c9afae4e29a803c375f05e3d55327dd2087c